# 3D-semantic-segmentation-of-modular-furniture

./: CMakeLists.txt  README.md
cli/: main.cpp
evaluation_scripts/: eval.sh  eval_edges.sh
include/parser/: canny.h  constants.h  detector.h  diffuse_moves.h  energy.h  json.h  jump_moves.h  kde.h  opencvModels.h  parser.h  processing.h  rjmcmc_sa.h  types.h  util.h
lib/libforest/: .hgignore  CMakeLists.txt
lib/libforest/.hg/: dirstate  hgrc  last-message.txt  undo.desc  undo.dirstate
lib/libforest/.hg/cache/: branch2-base  branchheads  rbc-revs-v1  tags
lib/libforest/.hg/store/: 00changelog.i  00manifest.i  fncache  undo
lib/libforest/cmake/: FindGTest.cmake
lib/libforest/docs/: references.md
lib/libforest/examples/: CMakeLists.txt  adaboost.cpp  convert.cpp  decision_tree.cpp  density_forest.cpp  density_tree.cpp  kde.cpp  kernel_density_tree.cpp  kmeans.cpp  online_decision_tree.cpp  online_rf.cpp  online_rf_convergence.cpp  pixel_importance.cpp  rf.cpp
lib/libforest/include/libforest/: classifier.h  classifier_learning.h  classifier_learning_tools.h  classifier_tools.h  data.h  data_tools.h  error_handling.h  estimators.h  fastlog.h  io.h  learning.h  learning_tools.h  libforest.h  sse.h  tree.h  unsupervised_learning.h  util.h
lib/libforest/src/: classifier.cpp  classifier_learning.cpp  classifier_learning_tools.cpp  classifier_tools.cpp  data.cpp  data_tools.cpp  error_handling.cpp  estimators.cpp  learning_tools.cpp  unsupervised_learning.cpp  util.cpp
lib/libforest/tests/: data.cpp  util.cpp
oni2PNG/: oni2PNG.cpp
scripts/: addKinectNoise.m  exportProjMatrix.py  getRotationAngles.py  noiseGaussian.m  parserCrossValidation.py
src/: CMakeLists.txt  Stopwatch.cpp  canny.cpp  detector.cpp  diffuse_moves.cpp  energy.cpp  json.cpp  jump_moves.cpp  pam.h  parser.cpp  parser_energy.cpp  processing.cpp  rjmcmc_sa.cpp  util.cpp
tests/: CMakeLists.txt  utilTest.cpp
